Fix misalignment of .locate-user with correct o-grid padding

--- a/client/components/app/geography-lookup/styles.scss
+++ b/client/components/app/geography-lookup/styles.scss
@@ -18,10 +18,14 @@ $border: #b3a9a0;
     max-width: none;
     flex: 1;
     color: oColorsGetTextColor(oColorsGetPaletteColor('slate'), 60);
-    margin-left: 10px; /* God I hate o-grid */
+    padding: 0 0 0 10px;
 
     @include oGridRespondTo($until: L) {
       flex-direction: column;
+    }
+
+    @include oGridRespondTo(M) {
+      padding: 0 0 0 20px;
     }
 
     &__form {
